# net-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  main.h  version.h.in
src/imgproc/: CMakeLists.txt  process.cpp  process.h
src/solver/: CMakeLists.txt  algorithm.h
test/: CMakeLists.txt  version_test.cpp
